--- a/client/src/components/RecipeDetail/RecipeDetail.module.css
+++ b/client/src/components/RecipeDetail/RecipeDetail.module.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap"); */
 
 .container {
   display: flex;
@@ -16,7 +16,7 @@
 .containerName {
   text-align: center;
   width: 100%;
-  font-family: "Montserrat", sans-serif;
+  font-family: fantasy, sans-serif;
   color: #132540;
 }
 .containerName h1 {
@@ -59,7 +59,7 @@
   align-items: center;
   justify-content: center;
   margin-right: 5px;
-  font-family: "Montserrat", sans-serif;
+  font-family: fantasy, sans-serif;
   color: #132540;
   height: 50vh;
 }
@@ -86,7 +86,7 @@
     height: 80px;
 } 
 .containerIcon h4{ 
-    font-family: "Montserrat", sans-serif;
+    font-family: fantasy, sans-serif;
     color: #d2812a;
 } 
 .containerTextSteps{
@@ -102,14 +102,14 @@
     width: 100%;
 }
 .containernNumSteps h4{
-    font-family: "Montserrat", sans-serif;
+    font-family: fantasy, sans-serif;
     color: #132540;
     border-bottom: solid #d2812a;
     margin-right: 20px;
     
 }
 .containernNumSteps h6{
-    font-family: "Montserrat", sans-serif;
+    font-family: fantasy, sans-serif;
     color: #132540;
     text-align: left;
 } 
@@ -129,6 +129,6 @@
     display: flex;
     justify-content: flex-start;
     color: #132540;
-    font-family: "Montserrat", sans-serif;
+    font-family: fantasy, sans-serif;
   }
   
