--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 .containerCard{ 
     display: flex;
     flex-direction: column;
@@ -46,8 +46,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: #132540;
-    font-family: 'Montserrat', sans-serif;
+    color: #41857c;
+    font-family: 'Pacifico', cursive;
 
 }
 .containerText h1{ 
@@ -87,8 +87,8 @@
     visibility: hidden;
     width: 120px;
     background-color: #e7e7e7;
-    color: #132540;
-    font-family: 'Montserrat', sans-serif;
+    color: #41857c;
+    font-family: 'Pacifico', cursive;
     text-align: center;
     border-radius: 6px;
     padding: 1px 0;
