--- a/client/src/components/Diet/Diet.module.css
+++ b/client/src/components/Diet/Diet.module.css
@@ -12,7 +12,7 @@
     width: 120px;
     background-color: #d2812a;
     color: #e7e7e7;
-    font-family: "Montserrat", sans-serif;
+    font-family: Arial, Helvetica, sans-serif, sans-serif;
     text-align: center;
     border-radius: 6px;
     padding: 1px 0;
