--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -19,7 +19,7 @@
     list-style: none;
     color:#132540;
     text-decoration: none;
-    font-family: 'Montserrat', sans-serif;
+    font-family: fantasy, sans-serif;
     font-size: 20px;
     position: relative;
 }
