--- a/client/src/components/Diet/Diet.module.css
+++ b/client/src/components/Diet/Diet.module.css
@@ -10,7 +10,7 @@
   .btn .tooltiptext {
     visibility: hidden;
     width: 120px;
-    background-color: #d2812a;
+    background-color: #073809;
     color: #e7e7e7;
     font-family: Arial, Helvetica, sans-serif, sans-serif;
     text-align: center;
@@ -32,14 +32,14 @@
     margin-left: -5px;
     border-width: 5px;
     border-style: solid;
-    border-color: #d2812a transparent transparent transparent;
+    border-color: #073809 transparent transparent transparent;
   }
   
   .btn::before {
     content: "";
     height: 3px;
     width: 0%;
-    background: #d2812a;
+    background: #073809;
     position: absolute;
     left: 0;
     bottom: -1px;
